--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="2;url=https://garoon.tech/" />
-</head>
+  <meta charset="utf-8">
+  <title>GaroonFrontendPlatform</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.f0b28ad581a97540732f.css"></head>
 <body>
-</body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.b98c25294d65c26916f4.js"></script></body>
 </html>
