--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta name="application-name" content="Garoon Tech">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="styles.f0b28ad581a97540732f.css"></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
 <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.bda95d5896422d031328.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.b68fb6e8ccff79464b7f.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="es2015-polyfills.js" nomodule></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
